@@ -1122,3 +1122,21 @@ gchar *find_executable_in_path(const char *exe_name, const char *path) {
 }
 
 #endif
+
+gchar *get_siril_version_string() {
+#ifdef _WIN32
+#ifdef SIRIL_UNSTABLE
+	return g_strdup_printf(_("unreleased %s %s-%s for %s (%s %s)"), PACKAGE, VERSION, SIRIL_GIT_VERSION_ABBREV,
+			SIRIL_BUILD_PLATFORM_FAMILY, CPU_ARCH, SIRIL_BUILD_PLATFORM_ENV);
+#else
+	return g_strdup_printf(_("%s %s for %s (%s %s)"), PACKAGE, VERSION, SIRIL_BUILD_PLATFORM_FAMILY, CPU_ARCH, SIRIL_BUILD_PLATFORM_ENV);
+#endif
+#else
+#ifdef SIRIL_UNSTABLE
+	return g_strdup_printf(_("unreleased %s %s-%s for %s (%s)"), PACKAGE, VERSION, SIRIL_GIT_VERSION_ABBREV,
+			SIRIL_BUILD_PLATFORM_FAMILY, CPU_ARCH);
+#else
+	return g_strdup_printf(_("%s %s for %s (%s)"), PACKAGE, VERSION, SIRIL_BUILD_PLATFORM_FAMILY, CPU_ARCH);
+#endif
+#endif
+}
